--- a/package.json
+++ b/package.json
@@ -1,25 +1,25 @@
 {
-    "name": "InnovatingTeams",
-    "description": "Making the world a better place",
+    "name": "RawTemplate",
+    "description": "Your tagline",
     "version": "0.1.1",
-    "homepage": "http://innovatingteams.com/",
-    "contrib_root": "https://github.com/InnovatingTeams/InnovatingTeams.github.io/",
+    "homepage": "http://example.com/",
+    "contrib_root": "https://github.com/Product/Product.github.io/",
     "author": {
         "name": "Arlo Belshee",
         "url": "https://github.com/arlobelshee"
     },
     "repository": {
         "type": "git",
-        "url": "https://github.com/InnovatingTeams/InnovatingTeams.github.io.git",
-        "slug": "InnovatingTeams.github.io"
+        "url": "https://github.com/Product/Product.github.io.git",
+        "slug": "Product.github.io"
     },
     "bugs": {
-        "url": "https://github.com/InnovatingTeams/InnovatingTeams.github.io/issues"
+        "url": "https://github.com/Product/Product.github.io/issues"
     },
     "licenses": [
         {
             "type": "MIT",
-            "url": "https://github.com/InnovatingTeams/InnovatingTeams.github.io/blob/master/LICENSE-MIT"
+            "url": "https://github.com/Product/Product.github.io/blob/master/LICENSE-MIT"
         },
         {
             "type": "CC BY 3.0",
