Getting close to a valid copy for apps. Should eventually to a r.js build, but for now we are just copying everything into place. Getting script errors on load of the sample app, but far fewer than when I started.

--- a/_config.yml
+++ b/_config.yml
@@ -15,6 +15,7 @@ includes:         <%= site.templates %>/includes/*.hbs
 layouts:          <%= site.templates %>/layouts
 layout:           default.hbs
 content:          content
+apps:          apps
 
 # Extensions
 helpers:          
