--- a/bower.json
+++ b/bower.json
@@ -1,10 +1,20 @@
 {
-  "name": "RawTemplate",
-  "main": [
-    "Gruntfile.js"
-  ],
-  "dependencies": {
-    "bootstrap": "~3.0.3"
-  },
-  "version": "0.1.1"
+	"name": "RawTemplate",
+	"main": [
+		"Gruntfile.js"
+	],
+	"dependencies": {
+		"bootstrap": "~3.0.3",
+		"font-awesome": ">=4.0.0",
+		"modernizr": "~2.6.2",
+		"durandal": ">=2.0.0",
+		"durandal-almond": "master",
+		"json2": "*"
+	},
+	"devDependencies": {
+		"mocha": "~1.17.1",
+		"should": "3.1.2",
+		"sinon": "http://sinonjs.org/releases/sinon-1.8.1.js"
+	},
+	"version": "0.1.1"
 }
